fix: bug with particles on iphone

--- a/src/common/components/Particles/ParticlesBackground.module.scss
+++ b/src/common/components/Particles/ParticlesBackground.module.scss
@@ -5,4 +5,7 @@
   z-index: -100;
   top:0;
   left:0;
+  @media screen and (max-width: 749px){
+    display: none;
+  }
 }
